syntax = "proto3";
package pb;
option go_package = "./pb";
import "google/protobuf/timestamp.proto";

message Transection {
  string payment_id = 1;
  PaymentStatus status = 2;
  string sender_id = 3;
  string receiver_id = 4;
  int64 amount = 5;
  string note = 6;
  google.protobuf.Timestamp created_at = 7;
}

message CreatePaymentRequest {
  string sender_id = 1;
  string receiver_id = 2;
  int64 amount = 3;
  string note = 4;
}

message CreatePaymentResponse {
  string payment_id = 1;
  PaymentStatus status = 2;
  google.protobuf.Timestamp created_at = 3;
}

message GetPaymentStatusRequest { string payment_id = 1; }

message GetPaymentStatusResponse { Transection transection = 1; }

message GetTransectionHistoryRequest {
  string user_id = 1;
  int64 limit = 2;
  int64 offset = 3;
}

message GetTransectionHistoryResponse {
  repeated Transection transection = 1;
  int64 total_transection = 2;
  int64 total_page = 3;
}

service WalletService {
  rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse);
  rpc GetPaymentStatus(GetPaymentStatusRequest)
      returns (GetPaymentStatusResponse);
  rpc GetTransectionHistory(GetTransectionHistoryRequest)
      returns (GetTransectionHistoryResponse);
}

enum PaymentStatus {
  PAYMENT_STATUS_COMPLETED = 0;
  PAYMENT_STATUS_ERROR = 1;
  PAYMENT_STATUS_PENDING = 2;
  PAYMENT_STATUS_REVERSED = 3;
}